@@ -2,13 +2,14 @@
 Hash: SHA1
 
 DIST shelldoctest-0.2.tar.gz 8486 RMD160 a601c7d29aabbc1da7451482acebbb33b1035bcf SHA1 cffd3742359e22133df9b04f34c996d0f77c9e3b SHA256 ec75a38fc22e021fd015cbd26a15d026b13b188ebaacc5205e0a7dae9e7ef2ae
+EBUILD shelldoctest-0.2-r1.ebuild 365 RMD160 27500498076e6143c1d92d98541a9fb6ca703593 SHA1 d3c637594462fc5689f9017c50d6414d3a8a6aed SHA256 a82cc9521f548da1e933c241b95e156b9f9bddea2356bb49a1d5293b85e08582
 EBUILD shelldoctest-0.2.ebuild 338 RMD160 501662b5e942f0cb538d661cace61cb893800d35 SHA1 c7205bad2ab75ed7fbd9cdd14334ace4fad01153 SHA256 47cc650f09f98a8acc5f2560c44b7bd47232b861cb77d68fbe4daf8c84eb684d
-MISC ChangeLog 551 RMD160 4f70efead0b6b769f03d994bf1c3bf62726572e8 SHA1 d6d013011540ccf684628accdec5aa164abaf8cf SHA256 582889a49d8b50b888c3ee38cd2c2c2d0ac4ac2b6142b2bafa30738f332f4ce0
+MISC ChangeLog 822 RMD160 5f6005d5c86ae9fe07db9af129dfb011de3558f4 SHA1 eb39f986fe402fa551fc33e1ac844ef7b5b39fbc SHA256 c13452dd9f65acff59d9f0a91da136fa10f862ef50bb3bd0128a9131ba5fbb07
 MISC metadata.xml 505 RMD160 3418bdfa0032d7fc2c4e64c73775d16277cb653c SHA1 f42e5ea96db2eed78da2091ea8e331c4e6819316 SHA256 a3ece2c3cbafb7216416aed733e7161a686984eeb6d1cd48a14c54c0f0200b2f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkulomYACgkQzJrj3cAXR0nnMgCfeaOnbCLdAEG8sL+G6oCBZ7fW
-3CUAoKjj7ViRjxnesCFUqepzgS1lLY2B
-=h5GA
+iEYEARECAAYFAkxzLI0ACgkQzJrj3cAXR0keegCeKy7rmFe7IOIf0vU0RfoKf9Eb
+gcMAoKj3XJRcvyRBHCwq8Ko6zijYCjD/
+=eoy9
 -----END PGP SIGNATURE-----
