@@ -38,5 +38,7 @@ REM 2010-09-22 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 mail-client/notmuch-0.
 REM 2010-09-22 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-client/notmuch-0.3 %a
 REM 2010-09-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/commandlineapp-3.0.5 %a
 REM 2010-09-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/commandlineapp-3.0.5 %a
+REM 2010-09-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/shelldoctest-0.2-r1 %a
+REM 2010-09-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/shelldoctest-0.2-r1 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
